[tool.poetry]
name = "street-manager-open-usrn-map"
version = "0.1.0"
description = ""
authors = ["christophercarlon <cmcarleone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.0.0"
geopandas = "^0.14.4"
pandas = "^2.2.2"
openpyxl = "^3.1.3"
streamlit = "^1.35.0"
streamlit-folium = "^0.20.0"
loguru = "^0.7.2"
ruff = "^0.4.8"
osmnx = "^1.9.3"
watchdog = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
